allprojects {
    group 'ru.akiselev'
    version '1.0-SNAPSHOT'
}

subprojects {
    apply plugin: 'java'
    apply plugin: 'idea'

    repositories {
        mavenCentral()
    }

    sourceCompatibility = 17
    targetCompatibility = 17

    dependencies {
        testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
        testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
    }

    test {
        useJUnitPlatform()
    }

    tasks.withType(JavaCompile) {
        options.compilerArgs += "--enable-preview"
    }

    tasks.withType(Test) {
        jvmArgs += "--enable-preview"
    }

    tasks.withType(JavaExec) {
        jvmArgs += '--enable-preview'
    }
}
